# const_for

./: Cargo.toml  LICENSE.txt  README.md
src/: const_for.rs  lib.rs
tests/: tests.rs
